[gd_scene load_steps=6 format=3 uid="uid://c7kbh4pf0f664"]

[ext_resource type="Script" path="res://entities/interactable/enemies/bee_parent.gd" id="1_r67if"]
[ext_resource type="Texture2D" uid="uid://dfdi7tr841853" path="res://icon.svg" id="2_2vbix"]
[ext_resource type="Script" path="res://entities/interactable/enemies/bee_single.gd" id="2_su227"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6tly5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oh1kc"]

[node name="bees_enemy" type="AnimatableBody2D"]
script = ExtResource("1_r67if")

[node name="bee1" type="AnimatableBody2D" parent="."]
collision_layer = 2
collision_mask = 2
sync_to_physics = false
script = ExtResource("2_su227")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bee1"]
shape = SubResource("RectangleShape2D_6tly5")

[node name="Sprite2D" type="Sprite2D" parent="bee1/CollisionShape2D"]
texture = ExtResource("2_2vbix")

[node name="DamageHitbox" type="Area2D" parent="bee1"]
collision_layer = 6
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="bee1/DamageHitbox"]
shape = SubResource("RectangleShape2D_oh1kc")

[node name="bee2" type="AnimatableBody2D" parent="."]
collision_layer = 2
collision_mask = 2
sync_to_physics = false
script = ExtResource("2_su227")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bee2"]
shape = SubResource("RectangleShape2D_6tly5")

[node name="Sprite2D" type="Sprite2D" parent="bee2/CollisionShape2D"]
texture = ExtResource("2_2vbix")

[node name="DamageHitbox" type="Area2D" parent="bee2"]
collision_layer = 6
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="bee2/DamageHitbox"]
shape = SubResource("RectangleShape2D_oh1kc")

[connection signal="tree_exiting" from="bee1" to="." method="_on_bee_tree_exiting"]
[connection signal="tree_exiting" from="bee2" to="." method="_on_bee_tree_exiting"]
